# ChangeLog for net-www/amaya
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/amaya/ChangeLog,v 1.16 2003/12/19 14:16:24 lu_zero Exp $

*amaya-8.2 (19 Dec 2003)

  19 Dec 2003; Luca Barbato <lu_zero@gentoo.org> amaya-8.2.ebuild:
  New version

  01 Oct 2003; Heinrich Wendel <lanius@gentoo.org> amaya-8.1a.ebuild:
  added imlib dep with gtk

*amaya-8.1a (28 Jul 2003)

  28 Jul 2003; lu_zero <lu_zero@gentoo.org> amaya-8.1a.ebuild:
  Version bump, thanks to Arnaud Launay <asl@launay.org> for the 
  notice.

*amaya-8.0 (28 Apr 2003)

  28 Apr 2003; Luca Barbato <lu_zero@gentoo.org> amaya-8.0.ebuild:
  New version.

30 Mar 2003; Luca Barbato <lu_zero@gentoo.org> amaya-7.2.ebuild:
  Enabled gtk support

*amaya-7.2 (22 Jan 2003)

  22 Jan 2003; Luca Barbato <lu_zero@gentoo.org> amaya-*.ebuild:
  New version, added IUSE

*amaya-7.1 (22 Jan 2003)

  22 Jan 2003; Luca Barbato <lu_zero@gentoo.org> amaya-*.ebuild:
  removed the 7.0 one since isn't present anymore, added the 7.1,
  added the "old" src uri just in case somebody wants the older 
  versions and the gentoo mirror is unreachable.

*amaya-7.0 (12 Dec 2002)

  12 Dec 2002; Brad Cowan <bcowan@gentoo.org> amaya-7.0.ebuild,
  files/digest-amaya-7.0:
  
  Version bump, closes bug #12008.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*amaya-6.1 (2 June 2002)

  22 Nov 2002; Mark Guertin <gerk@gentoo.org> amaya-6.1.ebuild :
  Added ppc to keywords

  14 Jul 2002; Daniel Ahlberg <aliz@gentoo.org> amaya-6.1.ebuild :
  Added KEYWORDS.
  
  2 June 2002; Gabriele Giorgetti <stroke@gentoo.org> ChangeLog:
 
  New release.  

*amaya-4.1-r1 (1 Feb 2002)

  14 Jul 2002; Daniel Ahlberg <aliz@gentoo.org> amaya-4.1-r1.ebuild :
  Added LICENSE, KEYWORDS, SLOT.

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is