@@ -1,13 +1,13 @@
-MD5 356c270e77bdb583132e719054d2f037 ChangeLog 2259
-MD5 cb785d5b1a1dfe1d7826ef01398a99ca amaya-7.2.ebuild 1094
-MD5 f27af9fbb9ea94096ab02895a097e531 amaya-7.1.ebuild 896
-MD5 b820bd84d5f1eeae7dc90bbba9362cb2 amaya-8.2.ebuild 1123
-MD5 38a2d6db066cafb4f4845a007cdf8cfa amaya-8.1a.ebuild 1124
+MD5 b19f58e47d0abc806871b1196aa117da ChangeLog 2380
 MD5 0fae3b4ea64c8075649794bb4b2961fd amaya-6.1.ebuild 878
-MD5 441d9872a0348bfbaa19b7c416964d6f amaya-8.0.ebuild 1122
-MD5 d32b3050e60c33e8bae74f477e2cc393 files/digest-amaya-8.2 63
+MD5 f27af9fbb9ea94096ab02895a097e531 amaya-7.1.ebuild 896
+MD5 cb785d5b1a1dfe1d7826ef01398a99ca amaya-7.2.ebuild 1094
+MD5 6792b1fe08bd3ea3edd4d36526de31f7 amaya-8.0.ebuild 1128
+MD5 38a2d6db066cafb4f4845a007cdf8cfa amaya-8.1a.ebuild 1124
+MD5 018a51965db4bc852efda3b5a08930c5 amaya-8.2.ebuild 1128
 MD5 215d7cb127e55154da64d6095454f996 files/digest-amaya-6.1 63
+MD5 11b38151f5999852f7a8464584ac5c71 files/digest-amaya-7.1 63
 MD5 52a934a60b4b55a0381aa7006fd375a3 files/digest-amaya-7.2 63
 MD5 7a19c33d4760bf30e9618b8eb83078d6 files/digest-amaya-8.0 63
 MD5 353beae5d0ef0a78307400c82175a6cd files/digest-amaya-8.1a 64
-MD5 11b38151f5999852f7a8464584ac5c71 files/digest-amaya-7.1 63
+MD5 d32b3050e60c33e8bae74f477e2cc393 files/digest-amaya-8.2 63
